Cập nhật lại trang

--- a/ProjectDiamondShop/Content/Diamonds/ViewDiamond.css
+++ b/ProjectDiamondShop/Content/Diamonds/ViewDiamond.css
@@ -112,3 +112,7 @@
 	border: none;
 	background: none;
 }
+.video-frame {
+	border-radius: 15px; /* Thay đổi giá trị 15px nếu bạn muốn bo góc nhiều hơn hoặc ít hơn */
+	overflow: hidden; /* Đảm bảo nội dung bên trong cũng được bo góc */
+}
