--- a/ProjectDiamondShop/Content/Introduce/Radiant.css
+++ b/ProjectDiamondShop/Content/Introduce/Radiant.css
@@ -28,10 +28,12 @@ main {
 
 	.navbar .navbar-brand {
 		color: #FFFF99 !important;
-		font-weight: bold;
 		display: flex;
 		align-items: center;
-		font-family: "Playwrite ES Deco", cursive;
+		font-family: "Montserrat", sans-serif;
+		font-optical-sizing: auto;
+		font-weight: 400;
+		font-style: normal;
 	}
 
 		.navbar .navbar-brand img {
@@ -168,5 +170,9 @@ body {
 	.navbar .login-btn {
 		margin-bottom: 10px;
 	}
+}
+.carousel-indicators li {
+	/*text-indent: -9999px !important;*/ /* Ẩn văn bản */
+	display: none;
 }
 
