--- a/ProjectDiamondShop/Views/Home/HomePage.cshtml
+++ b/ProjectDiamondShop/Views/Home/HomePage.cshtml
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700&family=Playwrite+NG+Modern:wght@100..400&family=Playwrite+US+Trad&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="~/Content/HomePage.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/Content/Icons/diamond (1).png" />
     <style>
         .notification-bell {
             position: relative;
@@ -265,7 +267,7 @@
                                         </figure>
                                     }
                                 </div>
-                                <p style="display: flex; justify-content: center;"><a class="search-button" href="#" role="button">Search</a></p>
+                                <p style="display: flex; justify-content: center;"><a class="search-button" href="@Url.Action("Index", "Diamonds")" role="button">Search</a></p>
                                 <span class="w-100 d-block text-center"></span>
                             </div>
                         </div>
