--- a/ProjectDiamondShop/Views/Warranty/ViewWarranty.cshtml
+++ b/ProjectDiamondShop/Views/Warranty/ViewWarranty.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Warranty Details</h2>
 <a href="@Url.Action("ViewWarranty", "Warranty")" class="btn btn-primary">View Warranty</a>
-
+<link rel="icon" type="image/png" href="~/Content/Icons/diamond (1).png" />
 <div>
     <p><strong>Warranty Code:</strong> @Model.WarrantyCode</p>
     <p><strong>Warranty Start Date:</strong> @Model.WarrantyStartDate</p>
