--- a/ProjectDiamondShop/Content/Diamonds/Diamonds.css
+++ b/ProjectDiamondShop/Content/Diamonds/Diamonds.css
@@ -28,7 +28,10 @@ main {
 	.navbar .navbar-brand {
 		color: #FFFF99 !important;
 		font-weight: bold;
-		font-family: "Playwrite ES Deco", cursive;
+		font-family: "Montserrat", sans-serif;
+		font-optical-sizing: auto;
+		font-weight: 400;
+		font-style: normal;
 		display: flex;
 		align-items: center;
 	}
@@ -75,17 +78,12 @@ main {
 	}
 
 	.navbar .login-btn {
-		background: #28a745;
 		color: #fff !important;
 		border-radius: 50px;
 		padding: 0.5rem 1rem;
 		font-weight: bold;
 		transition: background-color 0.3s;
 	}
-
-		.navbar .login-btn:hover {
-			background: #218838;
-		}
 
 .navbar-toggler {
 	border: none;
