--- a/ProjectDiamondShop/Content/HomePage.css
+++ b/ProjectDiamondShop/Content/HomePage.css
@@ -30,7 +30,10 @@ main {
 	.navbar .navbar-brand {
 		color: #FFFF99 !important;
 		font-weight: bold;
-		font-family: "Playwrite ES Deco", cursive;
+		font-family: "Montserrat", sans-serif;
+		font-optical-sizing: auto;
+		font-weight: 400;
+		font-style: normal;
 		display: flex;
 		align-items: center;
 	}
@@ -70,18 +73,13 @@ main {
 			width: 100%;
 		}
 
-	.navbar .login-btn {
-		background: #28a745;
+	.navbar .login-btn {		
 		color: #fff !important;
 		border-radius: 50px;
 		padding: 0.5rem 1rem;
 		font-weight: bold;
 		transition: background-color 0.3s;
 	}
-
-		.navbar .login-btn:hover {
-			background: #218838;
-		}
 
 .navbar-toggler {
 	border: none;
@@ -285,4 +283,8 @@ main {
 	.navbar .login-btn {
 		margin-bottom: 10px;
 	}
+}
+.carousel-indicators li {
+	/*text-indent: -9999px !important;*/ /* Ẩn văn bản */
+	display: none;
 }
