--- a/ProjectDiamondShop/Content/Introduce/Princess.css
+++ b/ProjectDiamondShop/Content/Introduce/Princess.css
@@ -28,8 +28,10 @@ main {
 
 	.navbar .navbar-brand {
 		color: #FFFF99 !important;
-		font-weight: bold;
-		font-family: "Playwrite ES Deco", cursive;
+		font-family: "Montserrat", sans-serif;
+		font-optical-sizing: auto;
+		font-weight: 400;
+		font-style: normal;
 		display: flex;
 		align-items: center;
 	}
@@ -168,4 +170,8 @@ main {
 	.navbar .login-btn {
 		margin-bottom: 10px;
 	}
+}
+.carousel-indicators li {
+	/*text-indent: -9999px !important;*/ /* Ẩn văn bản */
+	display: none;
 }
