--- a/ProjectDiamondShop/Content/LoginPage.css
+++ b/ProjectDiamondShop/Content/LoginPage.css
@@ -160,7 +160,7 @@ body {
 	animation: move 0.6s;
 }
 
-@@keyframes move {
+@keyframes move {
 	0%, 49.99% {
 		opacity: 0;
 		z-index: 1;
@@ -284,7 +284,10 @@ body {
 	.navbar .navbar-brand {
 		color: #FFFF99 !important;
 		font-weight: bold;
-		font-family: "Playwrite ES Deco", cursive;
+		font-family: "Montserrat", sans-serif;
+		font-optical-sizing: auto;
+		font-weight: 400;
+		font-style: normal;
 		display: flex;
 		align-items: center;
 	}
@@ -325,17 +328,12 @@ body {
 		}
 
 	.navbar .login-btn {
-		background: #28a745;
 		color: #fff !important;
 		border-radius: 50px;
 		padding: 0.5rem 1rem;
 		font-weight: bold;
 		transition: background-color 0.3s;
 	}
-
-		.navbar .login-btn:hover {
-			background: #218838;
-		}
 
 .navbar-toggler {
 	border: none;
