--- a/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
+++ b/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Content/DeliveryStaff.css">
+    <link rel="icon" type="image/png" href="~/Content/Icons/diamond (1).png" />
 </head>
 <body>
     <div class="container">
