--- a/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
@@ -21,9 +21,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
     <link href="~/Content/Diamonds/Diamonds.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/Content/Icons/diamond (1).png" />
+    <style>
+        .range-slider {
+            position: relative;
+            width: 100%;
+            height: 10px;
+            margin-top: 20px;
+        }
+
+            .range-slider input[type="range"] {
+                -webkit-appearance: none;
+                width: 100%;
+                height: 10px;
+                background: transparent;
+                pointer-events: none;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+
+                .range-slider input[type="range"]::-webkit-slider-thumb {
+                    -webkit-appearance: none;
+                    height: 20px;
+                    width: 20px;
+                    background-color: #666;
+                    border-radius: 50%;
+                    pointer-events: all;
+                    position: relative;
+                    z-index: 1;
+                }
+
+                .range-slider input[type="range"]::-moz-range-thumb {
+                    height: 20px;
+                    width: 20px;
+                    background-color: #666;
+                    border-radius: 50%;
+                    pointer-events: all;
+                    position: relative;
+                    z-index: 1;
+                }
+
+                .range-slider input[type="range"]::-ms-thumb {
+                    height: 20px;
+                    width: 20px;
+                    background-color: #666;
+                    border-radius: 50%;
+                    pointer-events: all;
+                    position: relative;
+                    z-index: 1;
+                }
+
+            .range-slider .slider-track {
+                position: absolute;
+                height: 10px;
+                background-color: #ccc;
+                border-radius: 5px;
+                top: 0;
+                left: 0;
+                right: 0;
+                z-index: 0;
+            }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -57,7 +118,6 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCart">
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "Cart")">View Cart</a></li>
-
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -141,8 +201,6 @@
                                     <input type="range" class="min-val price" min="0" max="50000" value="0" step="100" name="MinPrice">
                                     <input type="range" class="max-val price" min="0" max="50000" value="50000" step="100" name="MaxPrice">
                                     <div class="slider-track price"></div>
-                                    <div class="min-tooltip price"></div>
-                                    <div class="max-tooltip price"></div>
                                 </div>
                                 <div class="slider-values">
                                     <input type="text" class="min-input price" value="0">
@@ -157,8 +215,6 @@
                                     <input type="range" class="min-val carat" min="0.25" max="33.75" value="0.25" step="0.01" name="MinCaratWeight">
                                     <input type="range" class="max-val carat" min="0.25" max="33.75" value="33.75" step="0.01" name="MaxCaratWeight">
                                     <div class="slider-track carat"></div>
-                                    <div class="min-tooltip carat"></div>
-                                    <div class="max-tooltip carat"></div>
                                 </div>
                                 <div class="slider-values">
                                     <input type="text" class="min-input carat" value="0.25">
@@ -336,8 +392,6 @@
         function setAreaPrice() {
             rangePrice.style.left = `${((minPriceVal.value - sliderMinValuePrice) / (sliderMaxValuePrice - sliderMinValuePrice)) * 100}%`;
             rangePrice.style.right = `${100 - ((maxPriceVal.value - sliderMinValuePrice) / (sliderMaxValuePrice - sliderMinValuePrice)) * 100}%`;
-            minTooltipPrice.style.left = (minPriceVal.value / sliderMaxValuePrice) * 100 + "%";
-            maxTooltipPrice.style.right = 100 - (maxPriceVal.value / sliderMaxValuePrice) * 100 + "%";
         }
 
         function setMinInputPrice() {
@@ -400,8 +454,6 @@
         function setAreaCarat() {
             rangeCarat.style.left = `${((minCaratVal.value - sliderMinValueCarat) / (sliderMaxValueCarat - sliderMinValueCarat)) * 100}%`;
             rangeCarat.style.right = `${100 - ((maxCaratVal.value - sliderMinValueCarat) / (sliderMaxValueCarat - sliderMinValueCarat)) * 100}%`;
-            minTooltipCarat.style.left = (minCaratVal.value / sliderMaxValueCarat) * 100 + "%";
-            maxTooltipCarat.style.right = 100 - (maxCaratVal.value / sliderMaxValueCarat) * 100 + "%";
         }
 
         function setMinInputCarat() {
