--- a/ProjectDiamondShop/Views/Diamonds/ViewDiamond.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/ViewDiamond.cshtml
@@ -7,6 +7,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <link href="~/Content/Diamonds/ViewDiamond.css" rel="stylesheet" />
+<link rel="icon" type="image/png" href="~/Content/Icon/diamond.png" />
 
 <div class="container container-custom">
     <a href="@Url.Action("Index", "Diamonds")" class="back-to-gallery">
@@ -50,6 +51,9 @@
                         <span class="lnr"></span>Add to Cart
                     </button>
                 }
+            </div>
+            <div class="video-container mt-3">
+                <iframe class="video-frame" width="560" height="315" src="https://www.youtube.com/embed/EjVKezPY5Vo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
