--- a/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
+++ b/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <title>Order Details and Update Status</title>
     <link rel="stylesheet" href="/Content/bootstrap.min.css" />
+    <link rel="icon" type="image/png" href="~/Content/Icons/diamond (1).png" />
     <style>
         .container {
             display: flex;
