--- a/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
+++ b/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>@ViewBag.Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="~/Content/Icons/diamond (1).png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
     <style>
         * {
@@ -28,7 +29,10 @@
             .navbar .navbar-brand {
                 color: #FFFF99 !important;
                 font-weight: bold;
-                font-family: "Playwrite ES Deco", cursive;
+                font-family: "Montserrat", sans-serif;
+                font-optical-sizing: auto;
+                font-weight: 400;
+                font-style: normal;
                 display: flex;
                 align-items: center;
             }
@@ -69,17 +73,12 @@
                 }
 
             .navbar .login-btn {
-                background: #28a745;
                 color: #fff !important;
                 border-radius: 50px;
                 padding: 0.5rem 1rem;
                 font-weight: bold;
                 transition: background-color 0.3s;
             }
-
-                .navbar .login-btn:hover {
-                    background: #218838;
-                }
 
         .navbar-toggler {
             border: none;
@@ -150,14 +149,15 @@
                 text-decoration: none;
                 margin: 0 10px;
             }
+
             .footer p {
                 color: #FFD700;
             }
 
-                .footer a:hover {
-                    color: #FFD700;
-                    text-decoration: underline;
-                }
+            .footer a:hover {
+                color: #FFD700;
+                text-decoration: underline;
+            }
 
         /* Media Queries for Responsive Design */
         @@media (max-width: 992px) {
