--- a/ProjectDiamondShop/Views/Warranty/WarrantyDetails.cshtml
+++ b/ProjectDiamondShop/Views/Warranty/WarrantyDetails.cshtml
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
     <link href="~/Content/Warrantys/Warranty.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/Content/Icons/diamond (1).png" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
